--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,9 @@
 }
 
 body {
-  background: linear-gradient(90deg, #7474BF 10%, #348AC7 90%);}
+  background: linear-gradient(90deg, #7474BF 10%, #348AC7 90%);
+  height: 100vh;
+}
 
 .weather-card {
   box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
